fix css overlap in pages

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -4,3 +4,7 @@
     flex-direction: column;
     
 }
+
+.main-body {
+    margin-left: 10%;
+}
